src/test/resources/semantic_errors/undecl_double_assignment.notc
void main() {
    d = 54.3;
}
